# flowertune-benchmark

./: README.md  pyproject.toml
coding/: pyproject.toml
coding/flowertune_code/: models.py  server_app.py  strategy.py
finance/: pyproject.toml
flowertune_benchmark/: client_app.py  dataset.py  models.py  server_app.py  strategy.py
general_nlp/: pyproject.toml
general_nlp/flowertune_nlp/: __init__.py  server_app.py  strategy.py
medical/: pyproject.toml
medical/flowertune_medical/: models.py  strategy.py
